--- a/risk_return_analysis.ipynb
+++ b/risk_return_analysis.ipynb
@@ -239,110 +239,9 @@
        "2014-10-07                    59.993735               52.005864   193.26  "
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SOROS FUND MANAGEMENT LLC</th>\n",
-       "      <th>PAULSON &amp; CO.INC.</th>\n",
-       "      <th>TIGER GLOBAL MANAGEMENT LLC</th>\n",
-       "      <th>BERKSHIRE HATHAWAY INC</th>\n",
-       "      <th>S&amp;P 500</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2020-09-04</th>\n",
-       "      <td>31.546221</td>\n",
-       "      <td>14.364969</td>\n",
-       "      <td>63.319419</td>\n",
-       "      <td>64.668648</td>\n",
-       "      <td>342.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-08</th>\n",
-       "      <td>31.491425</td>\n",
-       "      <td>14.337851</td>\n",
-       "      <td>63.238988</td>\n",
-       "      <td>64.344083</td>\n",
-       "      <td>333.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-09</th>\n",
-       "      <td>31.526541</td>\n",
-       "      <td>14.368297</td>\n",
-       "      <td>63.409792</td>\n",
-       "      <td>64.460992</td>\n",
-       "      <td>339.79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-10</th>\n",
-       "      <td>31.486896</td>\n",
-       "      <td>14.388256</td>\n",
-       "      <td>63.308920</td>\n",
-       "      <td>64.306412</td>\n",
-       "      <td>333.89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-11</th>\n",
-       "      <td>31.473747</td>\n",
-       "      <td>14.360482</td>\n",
-       "      <td>63.281442</td>\n",
-       "      <td>64.241088</td>\n",
-       "      <td>334.06</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            SOROS FUND MANAGEMENT LLC  PAULSON & CO.INC.  \\\n",
-       "date                                                       \n",
-       "2020-09-04                  31.546221          14.364969   \n",
-       "2020-09-08                  31.491425          14.337851   \n",
-       "2020-09-09                  31.526541          14.368297   \n",
-       "2020-09-10                  31.486896          14.388256   \n",
-       "2020-09-11                  31.473747          14.360482   \n",
-       "\n",
-       "            TIGER GLOBAL MANAGEMENT LLC  BERKSHIRE HATHAWAY INC  S&P 500  \n",
-       "date                                                                      \n",
-       "2020-09-04                    63.319419               64.668648   342.57  \n",
-       "2020-09-08                    63.238988               64.344083   333.21  \n",
-       "2020-09-09                    63.409792               64.460992   339.79  \n",
-       "2020-09-10                    63.308920               64.306412   333.89  \n",
-       "2020-09-11                    63.281442               64.241088   334.06  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -355,8 +254,7 @@
     "    infer_datetime_format=True\n",
     ")\n",
     "\n",
-    "display(whale_navs.head())\n",
-    "display(whale_navs.tail())"
+    "whale_navs.head()"
    ]
   },
   {
@@ -470,119 +368,17 @@
        "2014-10-08                     0.000242                0.000842  0.017489  "
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SOROS FUND MANAGEMENT LLC</th>\n",
-       "      <th>PAULSON &amp; CO.INC.</th>\n",
-       "      <th>TIGER GLOBAL MANAGEMENT LLC</th>\n",
-       "      <th>BERKSHIRE HATHAWAY INC</th>\n",
-       "      <th>S&amp;P 500</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2020-09-04</th>\n",
-       "      <td>-0.001079</td>\n",
-       "      <td>0.005050</td>\n",
-       "      <td>-0.000653</td>\n",
-       "      <td>-0.003985</td>\n",
-       "      <td>-0.008165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-08</th>\n",
-       "      <td>-0.001737</td>\n",
-       "      <td>-0.001888</td>\n",
-       "      <td>-0.001270</td>\n",
-       "      <td>-0.005019</td>\n",
-       "      <td>-0.027323</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-09</th>\n",
-       "      <td>0.001115</td>\n",
-       "      <td>0.002123</td>\n",
-       "      <td>0.002701</td>\n",
-       "      <td>0.001817</td>\n",
-       "      <td>0.019747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-10</th>\n",
-       "      <td>-0.001258</td>\n",
-       "      <td>0.001389</td>\n",
-       "      <td>-0.001591</td>\n",
-       "      <td>-0.002398</td>\n",
-       "      <td>-0.017364</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-11</th>\n",
-       "      <td>-0.000418</td>\n",
-       "      <td>-0.001930</td>\n",
-       "      <td>-0.000434</td>\n",
-       "      <td>-0.001016</td>\n",
-       "      <td>0.000509</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            SOROS FUND MANAGEMENT LLC  PAULSON & CO.INC.  \\\n",
-       "date                                                       \n",
-       "2020-09-04                  -0.001079           0.005050   \n",
-       "2020-09-08                  -0.001737          -0.001888   \n",
-       "2020-09-09                   0.001115           0.002123   \n",
-       "2020-09-10                  -0.001258           0.001389   \n",
-       "2020-09-11                  -0.000418          -0.001930   \n",
-       "\n",
-       "            TIGER GLOBAL MANAGEMENT LLC  BERKSHIRE HATHAWAY INC   S&P 500  \n",
-       "date                                                                       \n",
-       "2020-09-04                    -0.000653               -0.003985 -0.008165  \n",
-       "2020-09-08                    -0.001270               -0.005019 -0.027323  \n",
-       "2020-09-09                     0.002701                0.001817  0.019747  \n",
-       "2020-09-10                    -0.001591               -0.002398 -0.017364  \n",
-       "2020-09-11                    -0.000434               -0.001016  0.000509  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Prepare for the analysis by converting the dataframe of NAVs and prices to daily returns\n",
     "# Drop any rows with all missing values\n",
-    "# Review the first and last five rows of the daily returns DataFrame.\n",
+    "# Review the first five rows of the daily returns DataFrame.\n",
     "whale_daily_returns = whale_navs.pct_change().dropna()\n",
-    "display(whale_daily_returns.head())\n",
-    "display(whale_daily_returns.tail())"
+    "whale_daily_returns.head()"
    ]
   },
   {
@@ -1086,7 +882,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fde70040750>"
+       "<matplotlib.legend.Legend at 0x7fe1391fa890>"
       ]
      },
      "execution_count": 15,
@@ -1135,7 +931,7 @@
    "source": [
     "**Question** Based on the cumulative return data and the visualization, do any of the four fund portfolios outperform the S&P 500 Index?\n",
     "\n",
-    "**Answer** None of the four funds outperformed the S&P 500, but Berkshire Hathaway did noticeably better than the other three funds. Berkshire Hathaway, of the four funds, gets \"closest\" to the S&P 500 while considering that none of them really get too close to equal. "
+    "**Answer** Overall, none of the four funds outperformed the S&P 500, but Berkshire Hathaway did noticeably better than the other three funds. There were short periods of time in late 2015 and early 2016 where Tiger Global Management and Paulson & Co. were above the S&P 500 due to it dipping pretty low, but ever since 2016 it hasn't been very close. Berkshire Hathaway gets \"closest\" to the S&P 500 while considering that none of the four funds really get too close to equal post-2016. "
    ]
   },
   {
@@ -1304,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1114,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1149,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1374,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1179,7 @@
        "<AxesSubplot:title={'center':'21-day Rolling Standard Deviation for Hedge Funds and S&P 500'}, xlabel='date'>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1418,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1223,7 @@
        "<AxesSubplot:title={'center':'21-day Rolling Standard Deviation for Hedge Funds'}, xlabel='date'>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
