analysis response edits

--- a/risk_return_analysis.ipynb
+++ b/risk_return_analysis.ipynb
@@ -246,7 +246,7 @@
    ],
    "source": [
     "# Import the data by reading in the CSV file and setting the DatetimeIndex \n",
-    "# Review the first and last 5 rows of the DataFrame\n",
+    "# Review the first 5 rows of the DataFrame\n",
     "whale_navs = pd.read_csv(\n",
     "    Path('Resources/whale_navs.csv'),\n",
     "    index_col='date',\n",
@@ -882,7 +882,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb988776210>"
+       "<matplotlib.legend.Legend at 0x7fd6db2a5550>"
       ]
      },
      "execution_count": 15,
@@ -903,7 +903,7 @@
     }
    ],
    "source": [
-    "# create an overlay plot of all 4 hedge funds and S&P 500\n",
+    "# create an overlay plot of cumulative returns for all 4 hedge funds and S&P 500\n",
     "cumulative_ax = whale_snp_cumulative_returns['S&P 500'].plot(\n",
     "    legend=True, \n",
     "    title='Cumulative Returns for Hedge Funds and S&P 500 10/02/2014 - 09/11/2020', \n",
@@ -1286,7 +1286,7 @@
    "source": [
     "**Question 3** Based on the rolling standard deviations of only the four fund portfolios, which portfolio poses the most risk? Does this change over time? \n",
     "\n",
-    "**Answer 3** For the most part, Berkshire Hathaway poses the most risk as it clearly, and more frequently, has a higher rolling standard deviation. This does change over time as early in the data Soros Fund Management was the riskiest, and later on in the data there were times where Paulson and Co. was the riskest. Berkshire Hathaway does seem to historically be the riskiest overall as in the middle of the data it was far riskier, for far longer, than any of the other funds. Even late in the data where the effects of COVID-19 start to even all four funds out a bit, Berkshire Hathaway spends a lot of the time being the riskiest. "
+    "**Answer 3** For the most part, Berkshire Hathaway poses the most risk as it clearly, and more frequently, has a higher rolling standard deviation. This does change over time as early in the data Soros Fund Management was the riskiest, and later on in the data there were times where Paulson & Co. was the riskiest. Berkshire Hathaway does seem to historically be the riskiest overall as in the middle of the data it was far riskier, for far longer, than any of the other funds. Even at the very end of the data it is the riskiest, after breifly being lower than Paulson & Co., and appears to still be trending upwards."
    ]
   },
   {
@@ -1430,7 +1430,9 @@
    "source": [
     "**Question** Which of the four portfolios offers the best risk-return profile? Which offers the worst?\n",
     "    \n",
-    "**Answer** If you favor a higher sharpe ratio, then Berkshire Hathaway would have the best risk-return profile since it has the highest sharpe ratio with 0.717512. However, looking at the previous calculations of standard deviations you might want to consider Tiger Global Management as having the best risk-return profile since it has a competitive sharpe ratio with Berkshire Hathaway while also having the lowest full-length standard deviation and one of the lowest 21-day rolling standard deviation. "
+    "**Answer** If you favor a higher sharpe ratio, then Berkshire Hathaway would have the best risk-return profile since it has the highest sharpe ratio with 0.717512. However, looking at the previous calculations of standard deviations you might want to consider Tiger Global Management as having the best risk-return profile since it has a competitive sharpe ratio with Berkshire Hathaway while also having the lowest full-length standard deviation and one of the lowest 21-day rolling standard deviation. \n",
+    "\n",
+    "Paulson & Co. offers the worst performing risk-return profile as it has the worst Sharpe ratio while also typically having a high 21-day rolling standard deviation. Soros Fund Management has a low Sharpe ratio as well but it's rolling standard deviation is trending back down at a faster rate than Paulson & Co. is.  "
    ]
   },
   {
@@ -1796,7 +1798,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb958f9bf10>"
+       "<matplotlib.legend.Legend at 0x7fd6b83e4a50>"
       ]
      },
      "execution_count": 35,
